# frm_mirror-tlibs1

./: .gitignore  AUTHORS  CMakeLists.txt  FindMinuit2.cmake  INSTALL  LICENSES  LITERATURE  project.config  version.cpp  version.h
cl/: cl.cpp  cl.h
ext/: jl.h  tlibs.jl  tlibs_jl.cpp
ext/test/: tst.jl
file/: comp.cpp  comp.h  file.cpp  file.h  loaddat.h  loadinstr.cpp  loadinstr.h  loadinstr_impl.h  loadtxt.cpp  loadtxt.h  off.h  prop.h  recent.cpp  recent.h  tmp.cpp  tmp.h  x3d.cpp  x3d.h  xml.cpp  xml.h
fit/: funcmod.h  interpolation.h  minuit.cpp  minuit.h  swarm.h
gfx/: gil.h  gl.cpp  gl.h  gl_font.h  gl_font_impl.h  gl_impl.h  gnuplot.cpp  gnuplot.h  gnuplot_impl.h
helper/: array.h  bz.h  chrono.h  comp.cpp  comp.h  exception.h  file.cpp  file.h  flags.cpp  flags.h  fourier.cpp  fourier.h  geo.h  gl.cpp  gl.h  gnuplot.cpp  gnuplot.h  hash.h  lattice.h  linalg.h  linalg2.cpp  linalg2.h  log.cpp  log.h  math.h  mieze.hpp  misc.h  neutrons.hpp  proc.h  py.h  quat.h  rand.cpp  rand.h  spec_char.cpp  spec_char.h  stopwatch.h  string.cpp  string.h  tcp.cpp  tcp.h  (+4 more)
loader/: loadtxt.cpp  loadtxt.h
log/: debug.cpp  debug.h  log.cpp  log.h
math/: atoms.h  bz.h  dft.h  disp.h  distr.h  fftw.cpp  fftw.h  fourier.cpp  fourier.h  funcmod.h  geo.h  geo_prim.h  interpolation.cpp  interpolation.h  kd.h  lattice.h  linalg.h  linalg2.cpp  linalg2.h  linalg2_impl.h  linalg_ops.h  mag.h  math.h  mieze.h  mieze.hpp  minuit.cpp  minuit.h  neutrons.h  neutrons.hpp  nn.h  nuclear.h  numint.h  numint.hpp  powder.h  quat.h  rand.cpp  rand.h  rt.h  spin.h  stat.h  (+3 more)
net/: tcp.cpp  tcp.h  tcp_impl.h
old/: loadtxt.cpp  loadtxt.h  xml.cpp  xml.h
phys/: atoms.h  bz.h  lattice.h  mag.h  mieze.h  neutrons.h  nn.h  nuclear.h  powder.h  spin.h  term.h  units.h
script/: CMakeLists.txt  FindMinuit2.cmake  Makefile  TODO  calls.cpp  calls.h  calls_file.cpp  calls_math.cpp  calls_plot.cpp  calls_plot.h  calls_thread.cpp  calls_thread.h  fitter  flags.h  globals.cpp  globals.h  handles.cpp  handles.h  helper  hermelin.project  info.cpp  info.h  lexer.cpp  lexer.h  main.cpp  node.cpp  node.h  node_eval.cpp  node_opt.cpp  node_opt.h  parseobj.h  script.workspace  script.yy  script_helper.cpp  script_helper.h  symbol.cpp  symbol.h  themakefile  types.h  yylexer.cpp  (+1 more)
script/apps/: Al_abs.scr  bose.scr  braggtail.scr  dialog.scr  eiger.scr  elastic.scr  fit.scr  fit_se.scr  formfact.scr  hkl.scr  instr.scr  mcstas.scr  mieze.scr  neutrons.scr  phonon_1atom.scr  phonon_2atom.scr  plot.scr
script/lang/: calls.cpp  calls.h  globals.cpp  info.cpp  info.h  lexer.cpp  lexer.h  main.cpp  node.cpp  node.h  node_eval.cpp  node_opt.cpp  script.yy  script_helper.cpp  script_helper.h  symbol.cpp  symbol.h  types.h  yylexer.cpp  yylexer.h
script/runtime/: calls_basic.cpp  calls_basic.h  calls_file.cpp  calls_file.h  calls_fit.cpp  calls_fit.h  calls_math.cpp  calls_math.h  calls_plot.cpp  calls_thread.cpp
script/stuff/: hermelin.nanorc
script/test/: Makefile  arr.scr  bose.scr  call.scr  defarg.scr  distr.scr  erf.scr  errors.scr  fak.scr  fak_tst.cpp  fit.scr  fit2.scr  fit3.scr  fit4.scr  fit5.scr  fkt.scr  for.scr  glob.scr  import0.scr  import1.scr  lexer.cpp  lexer.h  linalg.scr  loadinstr.scr  main.cpp  map.scr  math.scr  mem.scr  minmax.scr  node.cpp  node.h  nthread.scr  parseobj.h  plot.scr  plot2.scr  plot2d.scr  qr.scr  rand.scr  rand2.scr  rand3.scr  (+17 more)
script/test/test/: fak.scr  fak_tst.cpp
string/: eval.cpp  eval.h  eval_impl.h  spec_char.cpp  spec_char.h  string.cpp  string.h
test/: array.cpp  atoms.cpp  binning.cpp  bose.cpp  bz.cpp  call.cpp  cl_dev.cpp  cl_scaleimg.cpp  cl_tst0.cpp  cl_tst1.cpp  cl_tst2.cpp  cofactor.cpp  coord.cpp  coordpoly.cpp  dft.cpp  dft2.cpp  dft3.cpp  distr.cpp  distr2.cpp  eig.cpp  eig2.cpp  eig3.cpp  eig4.cpp  eig5.cpp  eps.cpp  eval.cpp  fermi.cpp  ferro.cpp  fft_rev.cpp  fit.cpp  fs.cpp  geo2.cpp  gil1.cpp  gil16bit.cpp  gram.cpp  hkl.cpp  hund.cpp  kd.cpp  kd2.cpp  kd3.cpp  (+39 more)
time/: chrono.h  stopwatch.h
tools/distr/: CMakeLists.txt  distr.cpp  distr.h  distr_main.cpp
tools/misc/: metrop.cpp  metrop_series.cpp
